k8s/apps/multimedia/jellyfin/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
      app.kubernetes.io/instance: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
        app.kubernetes.io/instance: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: emnt.dev/on-nas
                    operator: DoesNotExist
                  - key: gpu.intel.com/device-id.0300-3e92.present
                    operator: In
                    values: ["true"]
      securityContext:
        runAsNonRoot: false # FIXME: Linuxserver images require root for init
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
        - name: jellyfin
          image: docker.io/linuxserver/jellyfin:10.11.8
          resources:
            requests:
              cpu: 100m
              gpu.intel.com/i915: 1
              memory: 1536Mi
            limits:
              gpu.intel.com/i915: 1
              memory: 12Gi
          securityContext:
            readOnlyRootFilesystem: false # FIXME: Linuxserver images require writable root fs
          livenessProbe:
            initialDelaySeconds: 300
            periodSeconds: 10
            httpGet:
              path: /health
              port: http
          volumeMounts:
            - name: multimedia
              mountPath: /multimedia
            - name: jellyfin-config
              mountPath: /config
          ports:
            - name: http
              containerPort: 8096
      volumes:
        - name: multimedia
          persistentVolumeClaim:
            claimName: multimedia
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
