k8s/apps/multimedia/jellyfin/service.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
  ports:
    - name: http
      port: 8096
      targetPort: 8096
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-auto-discovery
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: jellyfin
    app.kubernetes.io/instance: jellyfin
  ports:
    - name: auto-discovery-1
      port: 1900
      targetPort: 1900
      protocol: UDP
    - name: auto-discovery-2
      port: 7359
      targetPort: 7359
      protocol: UDP
